package com.mygdx.engine.entity;

/**
 * Interface for classes that can be updated.
 */
public interface Updatable
{
    public void update(final float deltaTime);
}
